--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="lentach">#432559</color>
+    <color name="lentach_shade1">#3c2150</color>
+    <color name="lentach_shade2">#351d47</color>
 </resources>
