--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -13,52 +12,76 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:background="#000000"
             android:padding="16dp"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
             android:text="@string/app_logs_come_here"
-            android:background="#000000" />
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/sugarAddingBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_last_scan_to_librelink_db"
             android:layout_below="@id/logTextView"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:text="@string/add_last_scan_to_librelink_db" />
 
         <Button
             android:id="@+id/removeLibrelinkDB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/remove_librelink_db"
             android:layout_below="@id/sugarAddingBtn"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:text="@string/remove_librelink_db" />
+
+        <RadioGroup
+            android:id="@+id/glucose_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/removeLibrelinkDB"
+            android:layout_centerHorizontal="true">
+
+            <RadioButton
+                android:id="@+id/mmolGlucoseUnit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mmol_l"
+                android:textColor="#FFFFFF"/>
+
+            <RadioButton
+                android:id="@+id/mgdlGlucoseUnit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mg_dl"
+                android:textColor="#FFFFFF"/>
+
+        </RadioGroup>
 
 
         <TextView
             android:id="@+id/currentBgView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/glucose_unit"
             android:layout_margin="16dp"
-            android:padding="16dp"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
             android:background="#000000"
+            android:padding="16dp"
             android:text="@string/current_bg_comes_here"
-            android:layout_below="@id/removeLibrelinkDB" />
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/bgHistoryView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/currentBgView"
             android:layout_margin="16dp"
-            android:padding="16dp"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
             android:background="#000000"
+            android:padding="16dp"
             android:text="@string/historic_bgs_come_here"
-            android:layout_below="@id/currentBgView" />
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 </ScrollView>
