--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,20 +26,12 @@
             android:layout_centerHorizontal="true"
             android:text="@string/add_last_scan_to_librelink_db" />
 
-        <Button
-            android:id="@+id/removeLibrelinkDB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/sugarAddingBtn"
-            android:layout_centerHorizontal="true"
-            android:text="@string/remove_librelink_db" />
-
         <RadioGroup
             android:id="@+id/glucose_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@id/removeLibrelinkDB"
+            android:layout_below="@id/sugarAddingBtn"
             android:layout_centerHorizontal="true">
 
             <RadioButton
@@ -57,7 +49,6 @@
                 android:textColor="#FFFFFF"/>
 
         </RadioGroup>
-
 
         <TextView
             android:id="@+id/currentBgView"
@@ -82,6 +73,14 @@
             android:text="@string/historic_bgs_come_here"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/removeLibrelinkDB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bgHistoryView"
+            android:layout_centerHorizontal="true"
+            android:text="@string/remove_librelink_db" />
 
     </RelativeLayout>
 </ScrollView>
